# libudfread

./: Makefile.am  configure.ac
src/: ecma167.c  ecma167.h  libudfread-dk.pc.in  udfread.c  udfread.h
